--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!-- *********************************************
+
+
+
+                                                                                                                                bbbbbbbb
+               AAA                  ffffffffffffffff                                                                            b::::::b
+              A:::A                f::::::::::::::::f                                                                           b::::::b
+             A:::::A              f::::::::::::::::::f                                                                          b::::::b
+            A:::::::A             f::::::fffffff:::::f                                                                           b:::::b
+           A:::::::::A            f:::::f       ffffffrrrrr   rrrrrrrrr      ooooooooooo       cccccccccccccccc  aaaaaaaaaaaaa   b:::::bbbbbbbbb        ssssssssss
+          A:::::A:::::A           f:::::f             r::::rrr:::::::::r   oo:::::::::::oo   cc:::::::::::::::c  a::::::::::::a  b::::::::::::::bb    ss::::::::::s
+         A:::::A A:::::A         f:::::::ffffff       r:::::::::::::::::r o:::::::::::::::o c:::::::::::::::::c  aaaaaaaaa:::::a b::::::::::::::::b ss:::::::::::::s
+        A:::::A   A:::::A        f::::::::::::f       rr::::::rrrrr::::::ro:::::ooooo:::::oc:::::::cccccc:::::c           a::::a b:::::bbbbb:::::::bs::::::ssss:::::s
+       A:::::A     A:::::A       f::::::::::::f        r:::::r     r:::::ro::::o     o::::oc::::::c     ccccccc    aaaaaaa:::::a b:::::b    b::::::b s:::::s  ssssss
+      A:::::AAAAAAAAA:::::A      f:::::::ffffff        r:::::r     rrrrrrro::::o     o::::oc:::::c               aa::::::::::::a b:::::b     b:::::b   s::::::s
+     A:::::::::::::::::::::A      f:::::f              r:::::r            o::::o     o::::oc:::::c              a::::aaaa::::::a b:::::b     b:::::b      s::::::s
+    A:::::AAAAAAAAAAAAA:::::A     f:::::f              r:::::r            o::::o     o::::oc::::::c     ccccccca::::a    a:::::a b:::::b     b:::::bssssss   s:::::s
+   A:::::A             A:::::A   f:::::::f             r:::::r            o:::::ooooo:::::oc:::::::cccccc:::::ca::::a    a:::::a b:::::bbbbbb::::::bs:::::ssss::::::s
+  A:::::A               A:::::A  f:::::::f             r:::::r            o:::::::::::::::o c:::::::::::::::::ca:::::aaaa::::::a b::::::::::::::::b s::::::::::::::s
+ A:::::A                 A:::::A f:::::::f             r:::::r             oo:::::::::::oo   cc:::::::::::::::c a::::::::::aa:::ab:::::::::::::::b   s:::::::::::ss
+AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooooooooooo       cccccccccccccccc  aaaaaaaaaa  aaaabbbbbbbbbbbbbbbb     sssssssssss
 
 
 
@@ -6,8 +27,23 @@
 
 
 
+    Hey there buddy,
+    Lookin' at our source code, huh?
+    Be sure to drop me an email at hello@afrocabs.com!
+    We'd love to chat sometime, about anything really!
+
+    >> We transform your ideas to experiences.
+    >> A Product of WezaData Solutions // Nairobi, Kenya
+    >> Website : http://wezadata.co.ke
 
 
+ __    __ ____  ____  ___   ___    ___  ______  ___
+ ||    || ||      // // \\ || \\  // \\ | || | // \\
+ \\ /\ // ||==   //  ||=|| ||  )) ||=||   ||   ||=||
+  \V/\V/  ||___ //__ || || ||_//  || ||   ||   || ||
+
+
+    ********************************************** -->
 
 
 
@@ -255,7 +291,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="AfroCabs | Twende Official Website">
+    <meta name="description" content="Experience the safest & most friendly, affordable and convenient taxi and logistics services through AfroCabs App.
+AfroCabs is your ultimate designated taxi hailing app in Kenya.">
     <meta name="author" content="AfroCabs">
 
     <title>AfroCabs | Twende!</title>
@@ -275,9 +312,27 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- Google Analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-125822489-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
 </head>
-<body data-spy="scroll" data-target="#navmenu" data-offset="70">
+</head>
 
+<body data-spy="scroll" data-target="#navmenu" data-offset="70">
 <header id="header" class="header-section">
     <div class="container">
         <nav class="navbar">
@@ -382,25 +437,28 @@
                     <h2>Why AfroCabs?<br>Amazing benefits you can expect.</h2>
 
                     <ul class="check-list">
-                        <li><i class="fa fa-check"></i>From running your errands, to getting to work, or a night out with friends, AfroCabs is your ultimate designated driver..</li>
-                        <li><i class="fa fa-check"></i>You’re a click away to get to your destination. Just order your cab and we’ll be right with you!</li>
-                        <li><i class="fa fa-check"></i>Experience the safe & friendly, affordability and convenience with AfroCabs. Our fleets are clean, well maintained and ensure that there are no breakdowns whatsoever.</li>
-                        <li><i class="fa fa-check"></i>Best price guarantee.</li>
+                        <li><h4>For Drivers</h4></li>
                         <li><i class="fa fa-check"></i>Company only charges 10% commission on drivers.</li>
-
+                        <li><i class="fa fa-check"></i>Work within your own schedule.</li>
+                        <li><i class="fa fa-check"></i>No minimum hours.</li>
+                        <li><i class="fa fa-check"></i>No monthly fees and no boss.</li>
+                        <li><h4>For Riders</h4></li>
+                        <li><i class="fa fa-check"></i>Best price guarantee.</li>
+                        <li><i class="fa fa-check"></i>Its always a safe & friendly experience</li>
+                        <li><i class="fa fa-check"></i>Clean, well maintained fleets with no breakdowns whatsoever</li>
+                        <li><i class="fa fa-check"></i>Excellent customer service anytime of day or night.</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-</section><!-- Content Section -->
+</section>
 
 <section id="pricing" class="pricing-section bg-grey padding">
     <div class="container">
         <div class="section-heading mb-60 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
             <h2>Our Fleet</h2>
-            <p>All our vehicles are in excellent and working conditions and are NTSA approved.<br> We cater for all
-                types of riders, providing them with a variety of vehicles to choose from.</p>
+            <p>We cater for all types of riders, providing them with a variety of vehicles to choose from.<br>All our vehicles are in excellent and working conditions and are NTSA approved.</p>
         </div>
         <div class="row pricing-wrap">
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
@@ -464,7 +522,7 @@
                 <div class="col-2 text-center bottom">
                     <div class="circle">1</div>
                 </div>
-                <div class="col-6">
+                <div class="col-6" data-wow-delay="0ms" data-wow-duration="1000ms">
                     <h5>Getting started</h5>
                     <p>After installing the app, enter your email, phone number, name and city of operation. </p>
                 </div>
@@ -481,7 +539,7 @@
                 </div>
             </div>
             <div class="row align-items-center justify-content-end how-it-works">
-                <div class="col-6 text-right">
+                <div class="col-6 text-right" data-wow-delay="200ms" data-wow-duration="1000ms">
                     <h5>Upload the following</h5>
                     <p>A clear picture of yourself, Certificate of Good Conduct, National ID,KRA PIN, Valid Driving License,
                         comprehensive insurance cover, Sacco member number, copy of logbook, PIN and ID of
@@ -506,7 +564,7 @@
                 <div class="col-2 text-center top">
                     <div class="circle">3</div>
                 </div>
-                <div class="col-6">
+                <div class="col-6" data-wow-delay="400ms" data-wow-duration="1000ms">
                     <h5>Verification</h5>
                     <p>Grab a coffee and wait for verification which will be done within the shortest time possible.</p>
                 </div>
