--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
 
                     <ul class="check-list">
                         <li><h4>For Drivers</h4></li>
-                        <li><i class="fa fa-check"></i>Company only charges 10% commission on drivers.</li>
+                        <li><i class="fa fa-check"></i>Company charges only <strong>10% commission</strong> on rides.</li>
                         <li><i class="fa fa-check"></i>Work within your own schedule.</li>
                         <li><i class="fa fa-check"></i>No minimum hours.</li>
                         <li><i class="fa fa-check"></i>No monthly fees and no boss.</li>
@@ -522,7 +522,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                 <div class="col-2 text-center bottom">
                     <div class="circle">1</div>
                 </div>
-                <div class="col-6" data-wow-delay="0ms" data-wow-duration="1000ms">
+                <div class="col-6" data-wow-delay="400ms" data-wow-duration="1000ms">
                     <h5>Getting started</h5>
                     <p>After installing the app, enter your email, phone number, name and city of operation. </p>
                 </div>
@@ -539,7 +539,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                 </div>
             </div>
             <div class="row align-items-center justify-content-end how-it-works">
-                <div class="col-6 text-right" data-wow-delay="200ms" data-wow-duration="1000ms">
+                <div class="col-6 text-right" data-wow-delay="600ms" data-wow-duration="1000ms">
                     <h5>Upload the following</h5>
                     <p>A clear picture of yourself, Certificate of Good Conduct, National ID,KRA PIN, Valid Driving License,
                         comprehensive insurance cover, Sacco member number, copy of logbook, PIN and ID of
@@ -564,7 +564,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                 <div class="col-2 text-center top">
                     <div class="circle">3</div>
                 </div>
-                <div class="col-6" data-wow-delay="400ms" data-wow-duration="1000ms">
+                <div class="col-6" data-wow-delay="800ms" data-wow-duration="1000ms">
                     <h5>Verification</h5>
                     <p>Grab a coffee and wait for verification which will be done within the shortest time possible.</p>
                 </div>
@@ -580,12 +580,9 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
         </div>
         <div class="subscribe-wrap">
             <form id="chatForm" class="subscribe-form">
-                <input type="text" name="name" id="name" class="form_input"
-                       placeholder="Enter name" required>
-                <input type="email" name="email" id="email" class="form_input"
-                       placeholder="Enter Your Email Address..." required>
-                <input type="text" name="message" id="message" class="form_input"
-                       placeholder="Enter Your Message..." required>
+                <input type="text" name="name" id="name" class="form_input" placeholder="Enter name" required>
+                <input type="email" name="email" id="email" class="form_input" placeholder="Enter Your Email Address..." required>
+                <input type="text" name="message" id="message" class="form_input" placeholder="Enter Your Message..." required>
                 <div id="subscribe-result">
                     <p class="subscription-success"></p>
                     <p class="subscription-error"></p>
