--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
 
 
 
-    Hey there buddy,
+    Hey there buddy, 🔥 😎
     Lookin' at our source code, huh?
-    Be sure to drop me an email at hello@afrocabs.com!
+    Be sure to drop us an email at info@wezadata.co.ke or chat@kelvinkamau.app
     We'd love to chat sometime, about anything really!
 
     >> We transform your ideas to experiences.
@@ -283,18 +283,293 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!doctype html>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="">
-<html class="no-js lt-ie9 lt-ie8" lang="">
-<html class="no-js lt-ie9" lang="">
+<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en">
+<html class="no-js lt-ie9 lt-ie8" lang="en">
+<html class="no-js lt-ie9" lang="en">
 <html class="no-js" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Experience the safest & most friendly, affordable and convenient taxi and logistics services through AfroCabs App.
-AfroCabs is your ultimate designated taxi hailing app in Kenya.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Experience the safest, most friendly, affordable and convenient taxi & logistics services through AfroCabs App.AfroCabs is the ultimate designated taxi hailing app in Kenya.">
     <meta name="author" content="AfroCabs">
-
+    <meta name="" content="AfroCabs">
+    <meta name="theme-color" content="#fffc00"/>
+    <meta name="keywords" content="afrocabs,kenya,taxi,wezadata,kelvin kamau,afro,hailing,rides"/>
     <title>AfroCabs | Twende!</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png">
@@ -312,6 +587,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
     <!-- Google Analytics -->
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -330,7 +606,6 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
     </script>
     <!-- End Google Analytics -->
 </head>
-</head>
 
 <body data-spy="scroll" data-target="#navmenu" data-offset="70">
 <header id="header" class="header-section">
@@ -346,7 +621,6 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                         <li><a data-scroll class="nav-link" href="#drivers">Drivers</a></li>
                         <li><a data-scroll class="nav-link" href="#contact">Contact</a></li>
                     </ul>
-
                 </div>
             </div>
         </nav>
@@ -359,8 +633,9 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
             <div class="col-lg-9">
                 <div class="hero-content">
                     <h1>AfroCabs<br>Taxi &nbsp;& &nbsp;Logistics.</h1>
-                    <p>Experience the safest & most friendly, affordable and convenient taxi and logistics services through AfroCabs
-                        App. <br>AfroCabs is your ultimate designated taxi hailing app in Kenya.</p>
+                    <p>Experience the safest, most friendly, affordable and convenient taxi & logistics services through
+                        AfroCabs App.<br>
+                        AfroCabs is the ultimate designated taxi hailing app in Kenya.</p>
                     <div class="hero-btn">
                         <table>
                             <tr>
@@ -368,7 +643,6 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                                 <h3 class="driver">For Drivers</h3>
                             </td>
                             <td>
-
                                 <h3 class="rider">For Riders</h3>
                             </td>
                             </tr>
@@ -472,7 +746,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                         <li>No of seats: 2</li>
                         <li>Car CC: 1300</li>
                         <li>Condition: Neat | Clean | Road Certified</li>
-                        <li>Comfortability: Good</li>
+                        <li>Comfort: Good</li>
                         <li>Luggage: Good</li>
                     </ul>
                 </div>
@@ -488,7 +762,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                         <li>No of seats: 4</li>
                         <li>Car CC: 1300</li>
                         <li>Condition: Neat | Clean | Road Certified</li>
-                        <li>Comfortability: Good</li>
+                        <li>Comfort: Good</li>
                         <li>Luggage: Good</li>
                     </ul>
                 </div>
@@ -504,7 +778,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
                         <li>No of seats: 5</li>
                         <li>Car CC: 1500+</li>
                         <li>Condition: Neat | Clean | Road Certified</li>
-                        <li>Comfortability: Excellent</li>
+                        <li>Comfort: Excellent</li>
                         <li>Luggage: Excellent</li>
                     </ul>
                 </div>
@@ -541,7 +815,7 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
             <div class="row align-items-center justify-content-end how-it-works">
                 <div class="col-6 text-right" data-wow-delay="600ms" data-wow-duration="1000ms">
                     <h5>Upload the following</h5>
-                    <p>A clear picture of yourself, Certificate of Good Conduct, National ID,KRA PIN, Valid Driving License,
+                    <p>A clear picture of yourself, Certificate of Good Conduct, National ID or Passport,KRA PIN, Valid Driving License,
                         comprehensive insurance cover, Sacco member number, copy of logbook, PIN and ID of
                         owner,inspection report, and proof of prior transport work, front & lateral photo of vehicle.</p>
                 </div>
@@ -580,9 +854,11 @@ AfroCabs is your ultimate designated taxi hailing app in Kenya.">
         </div>
         <div class="subscribe-wrap">
             <form id="chatForm" class="subscribe-form">
-                <input type="text" name="name" id="name" class="form_input" placeholder="Enter name" required>
-                <input type="email" name="email" id="email" class="form_input" placeholder="Enter Your Email Address..." required>
-                <input type="text" name="message" id="message" class="form_input" placeholder="Enter Your Message..." required>
+                <input type="text" name="name" id="name" class="form_input" placeholder="My name is" required>
+                <input type="email" name="email" id="email" class="form_input" placeholder="My email address..."
+                       required>
+                <input type="text" name="message" id="message" class="form_input" placeholder="Enter a message..."
+                       required>
                 <div id="subscribe-result">
                     <p class="subscription-success"></p>
                     <p class="subscription-error"></p>
