--- a/index.html
+++ b/index.html
@@ -656,8 +656,9 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                     </div>
                 </div>
             </div>
-            <div class="hero-moc"></div>
+            <div class="hero-moc"><img src="img/taxi.gif" height="150px" style="margin-top: 93%; margin-left: 10%"></div>
         </div>
+
     </div>
 </section>
 
@@ -868,16 +869,16 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
         </div>
         <div class="clearfix"></div>
         <ul class="social-link">
-            <li><a href="https://web.facebook.com/Afrocabs-334833670422418/"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="mailto:hello@afrocabs.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://web.facebook.com/Afrocabs-334833670422418/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter" target="_blank"></i></a></li>
+            <li><a href="mailto:hello@afrocabs.com?subject=Hello AfroCabs Team" target="_blank"><i class="fas fa-envelope"></i></a></li>
         </ul>
     </div>
 </div>
 
 <footer class="footer-section align-center">
     <div class="container">
-        <p>&copy; 2018 AfroCabs | Powered by <a class="rider" href="http://wezadata.co.ke/" target="_blank">WezaData</a>
+        <p>&copy; 2018 AfroCabs | Powered by <a class="driver" href="http://wezadata.co.ke/" target="_blank">WezaData</a>
         </p>
     </div>
 </footer>
