--- a/index.html
+++ b/index.html
@@ -620,6 +620,7 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                         <li><a data-scroll class="nav-link" href="#pricing">Fleet</a></li>
                         <li><a data-scroll class="nav-link" href="#drivers">Drivers</a></li>
                         <li><a data-scroll class="nav-link" href="#contact">Contact</a></li>
+                        <li><a data-scroll class="nav-link" href="careers.html">Careers</a></li>
                     </ul>
                 </div>
             </div>
@@ -656,9 +657,8 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                     </div>
                 </div>
             </div>
-            <div class="hero-moc"><img src="img/taxi.gif" height="150px" style="margin-top: 93%; margin-left: 10%"></div>
+            <div class="hero-moc"><img src="img/taxi.gif" height="90px" style="margin-top: 97%; margin-left: 3%"></div>
         </div>
-
     </div>
 </section>
 
