--- a/careers.html
+++ b/careers.html
@@ -72,7 +72,7 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/careers.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -203,7 +203,6 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                         multi-user, multi-tenant hosted solution development as well as system operations and production
                         automation. You will be responsible for researching open source technologies for the project, as
                         well as designing and implementing innovative new functionalities. </p>
-                    <h6>Gross Annual Salary - $60k-$100k</h6>
                     <h3>Qualifications: </h3>
                     <ul class="check-list">
                         <li><i class="fa fa-check"></i>BS in Computer Engineering or Computer Science required.
