--- a/careers.html
+++ b/careers.html
@@ -168,7 +168,7 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                             years on a regular basis).
                         </li>
                     </ul>
-                    <a href="#" class="pricing-btn joint">Apply Now</a>
+                    <a href="mailto:hr@afrocabs.com" class="pricing-btn joint">Apply Now</a>
 
                     <h1>iOS Developer</h1>
                     <p>As an iOS Developer, you will play a major role in the development of our core iOS app. More
@@ -195,7 +195,7 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                         <li><i class="fa fa-check"></i>Utilize code versioning tools, such as Git or SVN.</li>
 
                     </ul>
-                    <a href="#" class="pricing-btn joint">Apply Now</a>
+                    <a href="mailto:hr@afrocabs.com" class="pricing-btn joint">Apply Now</a>
 
                     <h1>Software Engineers - Mauritius & Zambia</h1>
                     <p> We are looking for software developers who have the right background to help create robust and high available mobile and cloud
@@ -217,7 +217,7 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
                         <li><i class="fa fa-check"></i>Utilize code versioning tools, such as Git or SVN.</li>
 
                     </ul>
-                    <a href="#" class="pricing-btn joint">Apply Now</a>
+                    <a href="mailto:hr@afrocabs.com" class="pricing-btn joint">Apply Now</a>
 
                 </div>
 
