--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ AAAAAAA                   AAAAAAAfffffffff             rrrrrrr               ooo
 
     Hey there buddy, 🔥 😎
     Lookin' at our source code, huh?
-    Be sure to drop us an email at info@wezadata.co.ke or chat@kelvinkamau.app
+    Be sure to drop us an email at info@wezadata.co.ke or kamaucodes@gmail.com
     We'd love to chat sometime, about anything really!
 
     >> We transform your ideas to experiences.
